--- a/styles/main.css
+++ b/styles/main.css
@@ -278,3 +278,12 @@ ul{
 	margin: 0;
 	padding: 0;
 }
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+                                            IMAGES 
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+ img{
+    margin: 1em;
+    width: 100%; 
+    max-width: 500px;
+ }
